final push for today, spacing with fix itself once images work,good start, need to connnect js 'password' from frontpage html password

--- a/CSS + HTML/frontPage.css
+++ b/CSS + HTML/frontPage.css
@@ -5,9 +5,9 @@ body {
 
 #d1 {
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 50%;
-    transform: translate(-50%, -10%);
+    transform: translate(-50%, -5%);
     border: 4px solid black;
     padding: 20px;
     width: 90%; 
